--- a/appAtencionEmergencia/nbproject/project.properties
+++ b/appAtencionEmergencia/nbproject/project.properties
@@ -27,9 +27,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/appAtencionEmergencia.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.ojdbc6.jar=C:\\Program Files\\NetBeans 8.0.2\\driver\\ojdbc6.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.ojdbc6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
