--- a/appAtencionEmergencia/nbproject/project.properties
+++ b/appAtencionEmergencia/nbproject/project.properties
@@ -56,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=appatencionemergencia.AppAtencionEmergencia
+main.class=appatencionemergencia.Login
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
